<resources>
    <string name="app_name">Physics Data Review</string>
    <string name="formulas">Formulas</string>
    <string name="explanation">Explanation</string>
    <string name="all_formulas">All Formulas</string>
    <string name="info">Info</string>
    <string name="suggestion_link">https://forms.gle/z9rQdiyYp2uz5MMo6</string>
    <string name="bug_link">https://forms.gle/UvaUjvX2rmwffbd67</string>
    <string name="kofi_link">https://ko-fi.com/zj1111</string>
    <string name="info_p1">This app was created by an IB alumni to provide an easy to navigate study resource of the formulas in the physics data booklet.</string>
    <string name="info_p2">I am actively working on improving this app. If there is anything that can be improved submit them through the links below.   </string>
    <string name="info_p3">If this app has helped you, consider supporting the creator.</string>
    <string name="report_bug"><a href="https://forms.gle/UvaUjvX2rmwffbd67">Report a bug →</a></string>
    <string name="submit_suggestion"><a href="https://forms.gle/z9rQdiyYp2uz5MMo6">Submit a suggestion →</a></string>
    <string name="buy_coffee"><a href="https://ko-fi.com/zj1111">Buy me a coffee →</a></string>
    <string name="e1_2">∆y = absolute uncertainty of y\n∆a = absolute uncertainty of a\n∆b = absolute uncertainty of b\n\nFormulas for uncertainty calculation.</string>
    <string name="e1_3">A = vector\nAH = horizontal component of vector\nAv = vertical component of vector\n\nBe aware of where the reference angle is and apply the suitable trigonometric identities.</string>
    <string name="e2_1">v = final velocity\nu = initial velocity\na = acceleration\nt = time elapsed\ns = displacement\n\n“Suvat” equations for uniform motion. Acceleration must be constant.</string>
    <string name="e2_2_1">F = resultant force\nm = mass\na = acceleration\n\nNewton’s 2nd law of motion, acceleration due to resultant force.</string>
    <string name="e2_2_2">Ff = Frictional force\nµs = coefficient of static friction\nµd = coefficient of dynamic friction\nR = normal force\n\nThere is less frictional force for objects in motion.</string>
    <string name="e2_3_1">W = work\nF = force\ns = displacement\nθ = angle between direction of force and motion\n\nUsed to calculate work done by applied force.</string>
    <string name="e2_3_2">Ek = kinetic energy\nm = mass\nv = velocity\n\nKinetic energy is the energy an object has due to its movement.</string>
    <string name="e2_3_3_1">Ep = (elastic) potential energy\nk = spring constant\nx = displacement of spring from equilibrium\n\nPotential energy is the energy an object has due to its position. This formula can be used to calculate the elastic potential energy of a spring due to its displacement.</string>
    <string name="e2_3_3_2">Ep = (gravitational) potential energy \nm = mass\ng = gravitational acceleration\nh = height\n\nPotential energy is the energy an object has due to its position. This formula can be used to calculate the gravitational potential energy of an object due to its height.</string>
    <string name="e2_3_4">power = work per unit time\nF = force\nv = velocity\n\nEquation for calculating power using force and velocity.</string>
    <string name="e2_3_5">Ideal machines have 100% efficiency. Most real machines are not fully efficient. \n\nEfficiency cannot be greater than 100%</string>
    <string name="e2_4_1">p = momentum\nm = mass\nv = velocity\n\nMomentum is always conserved in an isolated system. Conserved in both elastic and inelastic collisions.</string>
    <string name="e2_4_2">F = force\n∆p = change in momentum\n∆t = duration\n\nResultant force due to momentum.</string>
    <string name="e2_4_3">Ek = kinetic energy\np = momentum\nm = mass\n\nCalculation of kinetic energy using momentum.</string>
    <string name="e2_4_4">F = force\n∆t = duration\n∆p = change in momentum\n\nImpulse is the change in momentum. </string>
    <string name="e3_1_1">Q = energy/heat\nm = mass\nc = specific heat capacity\n∆T = change in temperature\n\nEnergy received/given in changing an object’s temperature. Change in temperature can be in either Celcius or Kelvin.</string>
    <string name="e3_1_2">Q = energy/heat\nm = mass\nL = specific latent heat\n\nEnergy received/given in changing an object’s phase. Temperature does not change. </string>
    <string name="e3_2_1">p = pressure\nF = force\nA = area\n\nPressure is a result of the force of gas molecules colliding with the container.</string>
    <string name="e3_2_2">n = number of moles\nN = Number of atoms\nNA = Avogadro’s constant (6.02 x 10^23)</string>
    <string name="e3_2_3">p = pressure\nV = Volume\nn = moles\nR = gas constant (8.31)\nT = temperature \n\nIdeal gas law.</string>
    <string name="e3_2_4">Ek = average kinetic energy per molecule of gas\nkb = Boltzmann’s constant (1.38 x 10^-23)\nT = temperature\nR = Gas constant (8.31)\nNA = Avogadro’s constant (6.02 x 10^23)\n\nAverage kinetic energy per molecule of gas. Remember to multiply by the number of molecules when finding total energy.</string>
    <string name="e4_1">T = period\nf = frequency\n\nPeriod is the time taken for a complete oscillation.</string>
    <string name="e4_2">c = velocity\nf = frequency\nλ = wavelength\n\nFor electromagnetic waves, c is the speed of light (3.00 x 10^8).</string>
    <string name="e4_3_1">I = intensity\nA = amplitude\nx = distance from source\n\nIntensity of a wave’s radiation is proportional to the square of the amplitude (be careful when reading graphs). \n\nIntensity of a wave’s radiation is inversely proportional to the distance from the source, as it covers a spherical area.</string>
    <string name="e4_3_2">I = intensity\nI0 = original intensity\nθ = angle of polarizer relative to direction of polarized light.\n\nMalus’ law, transmitted intensity of light incident on polarizer. If light is unpolarized then intensity is 50% of original intensity.</string>
    <string name="e4_4_1">n = index of refraction\nθ = angle of incidence/refraction (from normal)\nv = wave velocity\n\nSnell’s law, refraction when a wave crosses between two media.</string>
    <string name="e4_4_2">s = fringe spacing (on screen)\nλ = wavelength\nD = distance to screen\nd = slit spacing</string>
    <string name="e4_4_3">n = order of minimum/maximum (any integer)\nλ = wavelength\n\nPoints of constructive interference have doubled amplitude (quadruple intensity).\n\nPoints of destructive interference have zero amplitude.</string>
    <string name="e5_1_1">I = current\nq = charge\nt = time\n\nCurrent is the rate electric charge flows through a circuit.</string>
    <string name="e5_1_2">F = force \nk = Coulomb constant (8.99 x 10^9)\nq = charge\nr = separation distance\n\nForce between two charges, r distance apart. Force is equal and opposite, obeys Newton\'s third law.</string>
    <string name="e5_1_3">k = Coulomb constant (8.99 x 10^9)\nε0 = permittivity of free space (8.85 x 10^-12)\n\nAlternate representation of Coulomb constant.</string>
    <string name="e5_1_4">V = potential difference\nW = work done\nq = charge</string>
    <string name="e5_1_5">E = electric field strength\nF = force\nq = charge</string>
    <string name="e5_1_6">I = current\nn = number of charges per unit volume\nA = cross-sectional area\nv = drift velocity\nq = charge</string>
    <string name="e5_2_1">V = voltage / potential difference\nI = current\n\nCurrent is equal for resistors in series. Voltage is divided between resistors.\n\nVoltage is equal for resistors in parallel. Current is divided.</string>
    <string name="e5_2_2">R = resistance\nV = voltage\nI = current\nP = power</string>
    <string name="e5_2_3">Total resistance of a circuit with resistors in series.</string>
    <string name="e5_2_4">Total resistance of a circuit with resistors in parallel.</string>
    <string name="e5_2_5">ρ = resistivity\nR = resistance\nA = cross-sectional area\nL = length\n\nRearrange to calculate the resistance of a material.</string>
    <string name="e5_3">ε = EMF (electromotive force)\nI = current\nR = resistance (in circuit)\nr = internal resistance (in battery)\n\nEMF is the energy supplied per coulomb of charge. ε is equal to V when no current is flowing (recall that V = IR).</string>
    <string name="e5_4_1">F = force\nq = charge\nv = velocity of charge\nB = magnitude of magnetic field\nθ = angle with field\n\nForce on a charge moving through a magnetic field.</string>
    <string name="e5_4_2">F = force\nB = magnitude of magnetic field\nI = current\nL = length of wire\nθ = angle with field\n\nForce on a current-carrying wire in a magnetic field.</string>
    <string name="e6_1_1">v = velocity\nω = angular velocity\nr = radius of circle\n\nVelocity of a body traveling in a circle.</string>
    <string name="e6_1_2">a = acceleration\nv = velocity\nr = radius of circle\nT = period\n\nCalculation of centripetal acceleration.</string>
    <string name="e6_1_3">F = force\nm = mass\nv = velocity\nr = radius of circle\nω = angular velocity\n\nCalculation of centripetal force. The direction of centripetal force is always towards the center and perpendicular to the direction of velocity.</string>
    <string name="e6_2_1">F = force \nG = gravitational constant (6.67 x 10^-11)\nM = mass of first body\nm = mass of second body \nr = radius\n\nNewton’s law of gravitation. Force experienced by 2 masses. Force on each mass is equal and opposite.</string>
    <string name="e6_2_2">g = gravitational field strength\nF = force\nm = mass\nField strength as experienced by mass in field.\n\nG = gravitational constant (6.67 x 10^-11)\nM = mass of first body\nr = radius\nField strength at a certain distance from a body.</string>
    <string name="e7_1">E = energy\nh = planck’s constant (6.63 x 10^-34)\nf = frequency\nλ = wavelength\nc = speed of light (3.00 x 10^8)\n\nFormulas for calculating the energy and wavelength of a photon.</string>
    <string name="e7_2">E = energy\nm = mass\nc = speed of light (3.00 x 10^8)\n\nEinstein’s theory of relativity of mass energy equivalence. Loss in mass -> energy. To calculate energy released in a reaction, find mass difference and use formula.</string>
    <string name="e7_3_1">u = up, d = down, c = charm, s = strange, t = top, b = bottom\n\nAll quarks have an antiquark with opposite charge and -⅓ baryon number. \n\nMesons are made up of one quark and one antiquark with a baryon number of 0. Baryons are made up of three quarks with a baryon number of 1.\n\nProtons: uud\nNeutrons: udd</string>
    <string name="e7_3_2">e = electron\nμ = muon\nτ = tau \nv = neutrino\n\nFamily lepton number is always conserved.</string>
    <string name="e7_3_3">Strangeness is not conserved in weak interactions.\n\nIf a charged particle is produced through an interaction, use an exchange particle with the charge of the particle.</string>
    <string name="e8_1_1">Power is the work done per unit time.</string>
    <string name="e8_1_2">A = area swept out by turbine blades = πL^2 where L is the length of the blade\nρ = air density\nv = wind speed\n\nCalculate power produced by an ideal wind turbine. Real wind turbine would produce less power as air does not come to rest inside the turbine and some energy is lost as heat.</string>
    <string name="e8_2_1">P = power\ne = emissivity (1 for black body)\nσ = Stefan-Boltzmann constant (1.38 x 10^-23)\nT = temperature\n\nCalculate the power radiated by a body. If the temperature is constant, the power radiated will be equal to the power incident.</string>
    <string name="e8_2_2">λ = wavelength\nT = temperature.\n\nWavelength at which intensity is at a maximum.</string>
    <string name="e8_2_3">I = intensity\nA = area\n\nCalculate intensity of radiation, power per unit area.</string>
    <string name="e8_2_4">Albedo is the ratio between the total scattered (reflected) radiation and the total incident radiation of that planet.</string>
</resources>