<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="20dp"
        >
        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/info"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="31dp"
            android:layout_height="31dp"
            app:layout_constraintTop_toTopOf="@id/title_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@null"
            app:tint="@color/black"
            android:layout_marginLeft="15dp"
            />

        <ImageView
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="#F5F5F5"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/info_p1_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="45dp"
        android:text="@string/info_p1"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/info_p2_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_p1_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:text="@string/info_p2"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/info_bug_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_p2_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/report_bug"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorLink="@color/blue"
        />

    <TextView
        android:id="@+id/info_suggestion_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_bug_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/submit_suggestion"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorLink="@color/blue"
        />

    <TextView
        android:id="@+id/info_p3_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_suggestion_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:text="@string/info_p3"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/info_coffee_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_p3_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/buy_coffee"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorLink="@color/blue"
        />
</androidx.constraintlayout.widget.ConstraintLayout>