<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulaDisplayActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/action_bar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            >
            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="Title"
                android:textSize="17sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="31dp"
                android:layout_height="31dp"
                app:layout_constraintTop_toTopOf="@id/title_textview"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:background="@null"
                app:tint="@color/black"
                android:layout_marginLeft="15dp"
                />

            <ImageView
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="#F5F5F5"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="15dp"
        app:cardCornerRadius="30dp"
        >

        <ScrollView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/formulas_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/formulas"
                    android:layout_marginTop="22dp"
                    android:layout_marginLeft="31dp"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="18sp"
                    />

                <ImageView
                    android:id="@+id/formula_imageview"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/e2_1"
                    android:layout_marginLeft="31dp"
                    android:layout_marginTop="15dp"
                    />

                <TextView
                    android:id="@+id/explanation_header_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explanation"
                    android:layout_marginTop="42dp"
                    android:layout_marginLeft="31dp"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/explanation_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e2_1"
                    android:layout_marginLeft="31dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:lineHeight="30dp"
                    android:paddingBottom="20dp"
                    />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>